LM/AS fixed answer alignment on question page

--- a/app/assets/stylesheets/partials/_base.scss
+++ b/app/assets/stylesheets/partials/_base.scss
@@ -83,12 +83,12 @@ $carrot-width: 20px;
 
 .responses {
   position: relative;
-  margin-left: $question-image-width;
+  margin-left: 370.5px;
 }
 
 .response-image {
   float: left;
-  left: $question-image-width - 8 * $grid-unit;
+  left: 290px;
   margin-top: $grid-unit;
   position: relative;
 }
